Fixed the imgs are not showing globally

--- a/styles/sass/modules/header.scss
+++ b/styles/sass/modules/header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-image: linear-gradient(rgba(255, 0, 128, 0.349), rgba(255, 115, 0, 0.363)), url('../../../images/pexels-freestocksorg-291762.jpg');
+    background-image: linear-gradient(rgba(255, 0, 128, 0.349), rgba(255, 115, 0, 0.363)), url('../images/pexels-freestocksorg-291762.jpg');
     height: 100vh;
     background-attachment: fixed;
 
