--- a/styles/sass/modules/history.scss
+++ b/styles/sass/modules/history.scss
@@ -7,7 +7,7 @@
 
     &__img--container {
         width: 50%;
-        background-image: url(../../../images/pexels-freestocksorg-291762.jpg);
+        background-image: url(../images/pexels-freestocksorg-291762.jpg);
         margin-right: 2rem;
         clip-path: polygon(0 0, 100% 0, 70% 100%, 0 100%);
         background-position: center;
